--- a/ethics.html
+++ b/ethics.html
@@ -32,125 +32,201 @@
             </div>
 
             <h2 class="text-light-green bold">Critics of DNA Fingerprinting</h2>
-            <p>37 years after DNA fingerprinting was discovered by Professor Sir Alec Jeffreys, it has become an
-                integral
-                part of modern crime-solving. The National Database of DNA has grown exponentially. Now, many
-                individuals are concerned about personal privacy when information is not only stored about crimminals
-                but about a much wider range of people.
-            </p>
-            <div class="bias">
-                <h3 class="text-light-green">Interpretation and Human Bias</h3>
-                <p>In Itiel E Dror and Greg Hampikian’s 2011 study, when 17 North American expert DNA scientists with
-                    around
-                    8.9 years of experience each interpreted a single DNA mixture collected from a real adjudicated
-                    crime
-                    scene, they produced inconsistent conclusions, suggesting subjectivity and bias (SB_DNA).
+            <div class="critics">
+                <p>37 years after DNA fingerprinting was discovered by Professor Sir Alec Jeffreys, it has become an
+                    integral
+                    part of modern crime-solving. The National Database of DNA has grown exponentially. Now, many
+                    individuals are concerned about personal privacy when information is not only stored about
+                    crimminals
+                    but about a much wider range of people.
                 </p>
-                <blockquote>
-                    In fact, only
-                    1 interpreter out of the 17 gave the same conclusion as the original crime scene conclusion
-                    (SB_DNA).
-                </blockquote>
-                <p>According to Dror and Hampikian, the knowledge of each interpreter about the investigation of the
-                    crime
-                    impacted the interpretation of the DNA sample. For example, an interpreter may analyze information
-                    in a
-                    biased way to fit their own existing beliefs, hopes, or motivations (SB_DNA). If DNA fingerprinting
-                    was
-                    truly objective, then all of the examiners would have reached the same conclusions.
-                </p>
+                <div class="bias">
+                    <h3 class="text-light-green">Interpretation and Human Bias</h3>
+                    <p>In Itiel E Dror and Greg Hampikian’s 2011 study, when 17 North American expert DNA scientists
+                        with
+                        around
+                        8.9 years of experience each interpreted a single DNA mixture collected from a real adjudicated
+                        crime
+                        scene, they produced inconsistent conclusions, suggesting subjectivity and bias (SB_DNA).
+                    </p>
+                    <blockquote>
+                        In fact, only
+                        1 interpreter out of the 17 gave the same conclusion as the original crime scene conclusion
+                        (SB_DNA).
+                    </blockquote>
+                    <p>According to Dror and Hampikian, the knowledge of each interpreter about the investigation of the
+                        crime
+                        impacted the interpretation of the DNA sample. For example, an interpreter may analyze
+                        information
+                        in a
+                        biased way to fit their own existing beliefs, hopes, or motivations (SB_DNA). If DNA
+                        fingerprinting
+                        was
+                        truly objective, then all of the examiners would have reached the same conclusions.
+                    </p>
 
-                <p>This may lead to the wrongly accused individuals ending up with emotional or reputational damage,
-                    negatively affecting them in their future careers and life.
-                </p>
+                    <p>This may lead to the wrongly accused individuals ending up with emotional or reputational damage,
+                        negatively affecting them in their future careers and life.
+                    </p>
 
-                <p>Furthermore, the supposed accuracy of DNA fingerprinting results leads investigators to not pursue a
-                    larger range of suspects, as they believe that the suspect in the DNA sample is the only one, when
-                    the
-                    DNA sample may have been interpreted incorrectly.
-                </p>
-                <p>It has been long believed that DNA is the “gold standard” of forensic science, free of all
-                    subjectivity.
-                </p>
-            </div>
+                    <p>Furthermore, the supposed accuracy of DNA fingerprinting results leads investigators to not
+                        pursue a
+                        larger range of suspects, as they believe that the suspect in the DNA sample is the only one,
+                        when
+                        the
+                        DNA sample may have been interpreted incorrectly.
+                    </p>
+                    <p>It has been long believed that DNA is the “gold standard” of forensic science, free of all
+                        subjectivity.
+                    </p>
+                </div>
 
-            <div class="racial-considerations">
-                <h3 class="text-light-green">Racial Considerations</h3>
+                <div class="racial-considerations">
+                    <h3 class="text-light-green">Racial Considerations</h3>
 
-                <p>According to many legal scholars such as Hank Greely and Dorothy Roberts, there are more African and
-                    Latino individuals who are already in the databases of the criminal justice system (PET).
-                </p>
-                <p>Indeed, in 2010, African Americans accounted for 27% of all adult arrests when the total Black
-                    population was 12%. In other countries, African Americans make up 52% of the population and account
-                    for over 85% of arrests (PET).
-                </p>
-            </div>
+                    <p>According to many legal scholars such as Hank Greely and Dorothy Roberts, there are more African
+                        and
+                        Latino individuals who are already in the databases of the criminal justice system (PET).
+                    </p>
+                    <p>Indeed, in 2010, African Americans accounted for 27% of all adult arrests when the total Black
+                        population was 12%. In other countries, African Americans make up 52% of the population and
+                        account
+                        for over 85% of arrests (PET).
+                    </p>
+                </div>
 
-            <div class="privacy-concerns">
-                <h3 class="text-light-green">Privacy Concerns</h3>
-                <p>According to a study by David J. Kaufman, the public is very concerned about genetic privacy and who
-                    has access to their DNA information (K_PRIV). </p>
-                <p>A survey of <span class="text-light-green bold">4659</span> U.S. adults revealed that:
-                </p>
+                <div class="privacy-concerns">
+                    <h3 class="text-light-green">Privacy Concerns</h3>
+                    <p>According to a study by David J. Kaufman, the public is very concerned about genetic privacy and
+                        who
+                        has access to their DNA information (K_PRIV). </p>
+                    <p>A survey of <span class="text-light-green bold">4659</span> U.S. adults revealed that:
+                    </p>
 
-                <canvas id="privacy_chart" class="my-4"></canvas>
-                <ul>
-                    <li><span class="text-light-red">90%</span> would be concerned about privacy</li>
-                    <li><span class="text-light-red">56%</span> would be concerned about researchers having their
-                        information.</li>
-                    <li><span class="text-light-red">37%</span> worry study data being used against them in
-                        criminal investigations</li>
-                </ul>
+                    <canvas id="privacy_chart" class="my-4"></canvas>
+                    <ul>
+                        <li><span class="text-light-red">90%</span> would be concerned about privacy</li>
+                        <li><span class="text-light-red">56%</span> would be concerned about researchers having their
+                            information.</li>
+                        <li><span class="text-light-red">37%</span> worry study data being used against them in
+                            criminal investigations</li>
+                    </ul>
 
-                <p>Interestingly, when needed, people are more willing to participate in DNA collection:</p>
-                <p>Within that same survey...</p>
-                <canvas id="willing_chart" class="my-4"></canvas>
-                <ul>
-                    <li><span class="text-light-green">60%</span> would participate in a biobank if asked
-                    </li>
-                    <li><span class="text-light-green">92%</span> would allow academic researchers to use study data
-                    </li>
-                    <li>Concern about privacy was related to lower willingness to participate only when respondents were
-                        told that they would receive $50 for participation and would not receive individual research
-                        results back.
-                    </li>
-                </ul>
+                    <p>Interestingly, when needed, people are more willing to participate in DNA collection:</p>
+                    <p>Within that same survey...</p>
+                    <canvas id="willing_chart" class="my-4"></canvas>
+                    <ul>
+                        <li><span class="text-light-green">60%</span> would participate in a biobank if asked
+                        </li>
+                        <li><span class="text-light-green">92%</span> would allow academic researchers to use study data
+                        </li>
+                        <li>Concern about privacy was related to lower willingness to participate only when respondents
+                            were
+                            told that they would receive $50 for participation and would not receive individual research
+                            results back.
+                        </li>
+                    </ul>
 
-                <p>Many individuals are also worried about the potential of the use of their genetic information to
-                    discriminate: for example, getting different kinds of insurance coverage for different prices based
-                    on medical history (GINA).</p>
+                    <p>Many individuals are also worried about the potential of the use of their genetic information to
+                        discriminate: for example, getting different kinds of insurance coverage for different prices
+                        based
+                        on medical history (GINA).</p>
 
-                <p>In 2012, privacy concerns lead the United Kingdom to pass the Protection of Freedoms Bill, requiring
-                    that all DNA samples be destroyed within 6 months of being taken.
-                    As a result, about 1,766,000 DNA profiles of innocent adults and children were deleted from the
-                    database (YG).
-                </p>
+                    <p>In 2012, privacy concerns lead the United Kingdom to pass the Protection of Freedoms Bill,
+                        requiring
+                        that all DNA samples be destroyed within 6 months of being taken.
+                        As a result, about 1,766,000 DNA profiles of innocent adults and children were deleted from the
+                        database (YG).
+                    </p>
+                </div>
             </div>
 
             <h2 class="text-light-green bold">Supporters of DNA Fingerprinting</h2>
-            <p>Supporters of DNA Fingerprinting believe that the practical applications of DNA fingerprinting and its
-                ability to both solve the crime and settle paternity disputes outweigh privacy concerns.
-            </p>
 
-            <h3 class="text-light-green">Ability to Solve Crime</h3>
-            <p>It is much harder for the average individual to prevent the shedding of DNA extracts such as hair
-                follicles, skin flakes, and saliva. In contrast, when needing to take an actual fingerprint, a criminal
-                could wear gloves to cover up their tracks, effectively blocking the investigation.
-            </p>
-            <p>In fact, DNA fingerprinting was used to arrest the Golden State Killer of 2018, someone who killed at
-                least 13 and raped 50 innocent people. Court documents describe how DNA collected from semen at a crime
-                scene was used to search a database on GEDmatch, a free service that allows individuals to discover
-                their relatives and ancestors. Coincidentally, Joseph James DeAngelo’s profile made a perfect match.
-                Afterward, police needed to confirm the identity of DeAngelo before making the arrest. Law enforcement
-                “lifted traces of DNA” from DeAngelo’s car door while he was shopping at Hobby Lobby. This DNA was
-                compared to genetic fingerprints captured from semen gathered at previous crime scenes. After confirming
-                a match, DeAngelo was arrested on the spot, putting an end to his decade-long eluding of law enforcement
-                (DETIME).
-            </p>
+            <div class="supporters">
+                <p>Supporters of DNA Fingerprinting believe that the practical applications of DNA fingerprinting and
+                    its
+                    ability to both solve the crime and settle paternity disputes outweigh privacy concerns.
+                </p>
 
-            <h3 class="text-light-green">Solve Paternity Disputes</h3>
-            <p>REPLACE REPLACE REPLACE</p>
+                <h3 class="text-light-green">Ability to Solve Crime</h3>
+                <p>It is much harder for the average individual to prevent the shedding of DNA extracts such as hair
+                    follicles, skin flakes, and saliva. In contrast, when needing to take an actual fingerprint, a
+                    criminal
+                    could wear gloves to cover up their tracks, effectively blocking the investigation.
+                </p>
+                <p>In fact, DNA fingerprinting was used to arrest the Golden State Killer of 2018, someone who killed at
+                    least 13 and raped 50 innocent people. Court documents describe how DNA collected from semen at a
+                    crime
+                    scene was used to search a database on GEDmatch, a free service that allows individuals to discover
+                    their relatives and ancestors. Coincidentally, Joseph James DeAngelo’s profile made a perfect match.
+                    Afterward, police needed to confirm the identity of DeAngelo before making the arrest. Law
+                    enforcement
+                    “lifted traces of DNA” from DeAngelo’s car door while he was shopping at Hobby Lobby. This DNA was
+                    compared to genetic fingerprints captured from semen gathered at previous crime scenes. After
+                    confirming
+                    a match, DeAngelo was arrested on the spot, putting an end to his decade-long eluding of law
+                    enforcement
+                    (DETIME).
+                </p>
+
+                <h3 class="text-light-green">Solve Paternity Disputes</h3>
+                <p>Even though the all humans share 99.9% of all DNA, there is still 0.1% that differs between us all.
+                    Within that seemingly small difference in DNA, children will have even more DNA in common with their
+                    mothers and fathers than complete strangers. When the DNA fingerprint for a child, mother, and
+                    father
+                    are taken, they can all be ran through gel electrophoresis. A suspect father is more likely to be
+                    the
+                    biological father if more of his DNA position matches the child's DNA position on the gel.</p>
+                <div class="text-center my-4">
+                    <img src="./img/gel_ran.png" alt="" class="img-fluid h-30vh ">
+                </div>
+
+                <p>In the example above, the child inherited DNA from the mother and the father in multiple sections,
+                    meaning that the candidate mother and father are likely the child's biological parents.</p>
+
+            </div>
+
+            <h2 class="text-light-green bold">Conclusion</h2>
+            <div class="conclusion">
+                <p>Depending on the perspective, there are drastically different views on the ethics behind DNA
+                    fingerprinting. Some people believe that having a national database of everyone’s DNA on file is
+                    unethical and is an invasion of privacy, while others argue that the potential of DNA fingerprinting
+                    to
+                    solve crimes and outweighs the drawbacks.</p>
+                <p>While it is important to acknowledge the benefits and disadvantages to each side, there are some ways
+                    that may be both ethical and agreeable to public opinion to collecting DNA profiles. </p>
+
+                <p>One such method would be to have a voluntary system of DNA collection. Similar to a blood drive,
+                    individuals could register their DNA into a national database maintained and encrypted with the
+                    highest
+                    security. By having genetic information stored, the volunteer is able to be proved innocent in a
+                    crime
+                    scene investigation. On the other hand, forensic scientists are also able to have another person’s
+                    DNA
+                    in a repository to assess whether or not someone is part of the suspect pool.
+                </p>
+                <p>Another way of collecting DNA would be to only collect the DNA of those who are arrested. Since
+                    someone
+                    was arrested once, and should they be set free eventually, they may have a higher chance of
+                    committing a
+                    crime again. In such a case, the DNA fingerprint of the person, while they were arrested, would link
+                    them as the perpetrator of the second crime. The basis for this method stems from the fact that 83%
+                    of
+                    state criminals released committed another crime within 9 years of their release (SP). </p>
+            </div>
+
+            <h2 class="text-light-green bold">References</h2>
+            <ol>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ol>
         </div>
+
+
     </section>
     <section class="navbar">
         <div class="container text-center">
