--- a/ethics.html
+++ b/ethics.html
@@ -33,7 +33,8 @@
 
             <h2 class="text-light-green bold">Critics of DNA Fingerprinting</h2>
             <div class="critics">
-                <p>37 years after DNA fingerprinting was discovered by Professor Sir Alec Jeffreys, it has become an
+                <p>37 years after DNA fingerprinting was discovered by Professor Sir Alec Jeffreys, DNA typing has
+                    become an
                     integral
                     part of modern crime-solving. The National Database of DNA has grown exponentially. Now, many
                     individuals are concerned about personal privacy when information is not only stored about
@@ -47,19 +48,19 @@
                         around
                         8.9 years of experience each interpreted a single DNA mixture collected from a real adjudicated
                         crime
-                        scene, they produced inconsistent conclusions, suggesting subjectivity and bias (SB_DNA).
+                        scene, they produced inconsistent conclusions, suggesting subjectivity and bias [4].
                     </p>
                     <blockquote>
                         In fact, only
                         1 interpreter out of the 17 gave the same conclusion as the original crime scene conclusion
-                        (SB_DNA).
+                        [4].
                     </blockquote>
                     <p>According to Dror and Hampikian, the knowledge of each interpreter about the investigation of the
                         crime
                         impacted the interpretation of the DNA sample. For example, an interpreter may analyze
                         information
                         in a
-                        biased way to fit their own existing beliefs, hopes, or motivations (SB_DNA). If DNA
+                        biased way to fit their own existing beliefs, hopes, or motivations [4]. If DNA
                         fingerprinting
                         was
                         truly objective, then all of the examiners would have reached the same conclusions.
@@ -86,12 +87,12 @@
 
                     <p>According to many legal scholars such as Hank Greely and Dorothy Roberts, there are more African
                         and
-                        Latino individuals who are already in the databases of the criminal justice system (PET).
+                        Latino individuals who are already in the databases of the criminal justice system [1].
                     </p>
                     <p>Indeed, in 2010, African Americans accounted for 27% of all adult arrests when the total Black
                         population was 12%. In other countries, African Americans make up 52% of the population and
                         account
-                        for over 85% of arrests (PET).
+                        for over 85% of arrests [1].
                     </p>
                 </div>
 
@@ -99,7 +100,7 @@
                     <h3 class="text-light-green">Privacy Concerns</h3>
                     <p>According to a study by David J. Kaufman, the public is very concerned about genetic privacy and
                         who
-                        has access to their DNA information (K_PRIV). </p>
+                        has access to their DNA information [6]. </p>
                     <p>A survey of <span class="text-light-green bold">4659</span> U.S. adults revealed that:
                     </p>
 
@@ -130,13 +131,13 @@
                     <p>Many individuals are also worried about the potential of the use of their genetic information to
                         discriminate: for example, getting different kinds of insurance coverage for different prices
                         based
-                        on medical history (GINA).</p>
+                        on medical history [7].</p>
 
                     <p>In 2012, privacy concerns lead the United Kingdom to pass the Protection of Freedoms Bill,
                         requiring
                         that all DNA samples be destroyed within 6 months of being taken.
                         As a result, about 1,766,000 DNA profiles of innocent adults and children were deleted from the
-                        database (YG).
+                        database [8].
                     </p>
                 </div>
             </div>
@@ -167,7 +168,7 @@
                     confirming
                     a match, DeAngelo was arrested on the spot, putting an end to his decade-long eluding of law
                     enforcement
-                    (DETIME).
+                    [5].
                 </p>
 
                 <h3 class="text-light-green">Solve Paternity Disputes</h3>
@@ -213,16 +214,34 @@
                     crime again. In such a case, the DNA fingerprint of the person, while they were arrested, would link
                     them as the perpetrator of the second crime. The basis for this method stems from the fact that 83%
                     of
-                    state criminals released committed another crime within 9 years of their release (SP). </p>
+                    state criminals released committed another crime within 9 years of their release [2]. </p>
             </div>
 
             <h2 class="text-light-green bold">References</h2>
             <ol>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>Ahmed, Aziza. “Ethical Concerns of DNA Databases Used for Crime Control.” Bill of Health, 30 Jan.
+                    2019,
+                    https://blog.petrieflom.law.harvard.edu/2019/01/14/ethical-concerns-of-dna-databases-used-for-crime-control/.
+                </li>
+                <li>Alper, Mariel, and Matthew Markman. pp. 1–24, 2018 Update on Prisoner Recidivism: A 9-Year Follow-up
+                    Period (2005-2014).</li>
+                <li>De Sola C. Privacy and genetic information. Conflict situations. Journal of Law and Human Genetics
+                    1994;1:179–80.</li>
+                <li>Dror IE, Hampikian G. Subjectivity and bias in forensic DNA mixture interpretation. Sci Justice.
+                    2011 Dec;51(4):204-8. doi: 10.1016/j.scijus.2011.08.004. Epub 2011 Sep 1. PMID: 22137054.</li>
+                <li>Ducharme, Jamie. “How Investigators Got the Golden State Killer Suspect's DNA.” Time, Time, 2 June
+                    2018, https://time.com/5299394/golden-state-killer-dna/. </li>
+                <li>Kaufman, D. J., Murphy-Bollinger, J., Scott, J., & Hudson, K. L. (2009). Public opinion about the
+                    importance of privacy in biobank research. American journal of human genetics, 85(5), 643–654.
+                    https://doi.org/10.1016/j.ajhg.2009.10.002
+                </li>
+                <li>McGuire, A. L., & Majumder, M. A. (2009). Two cheers for GINA?. Genome medicine, 1(1), 6.
+                    https://doi.org/10.1186/gm6
+                </li>
+                <li>Your Genome, “Is It Ethical to Have a National DNA Database?” Debates, The Public Engagement Team at
+                    the Wellcome Genome Campus, 19 Jan. 2015,
+                    https://www.yourgenome.org/debates/is-it-ethical-to-have-a-national-dna-database.
+                </li>
             </ol>
         </div>
 
