minor changes to color and wording

--- a/about.html
+++ b/about.html
@@ -106,7 +106,8 @@
     <section class="navbar">
         <div class="container text-center">
             <p class="lead text-center mx-auto">
-                <a href="./research.html">Learn about Sentiment Analysis Research</a>
+                <span class="bold">Up Next:</span>
+                <a href="./research.html"> Learn about Sentiment Analysis Research</a>
             </p>
         </div>
     </section>
