--- a/data.html
+++ b/data.html
@@ -96,7 +96,8 @@
     <section class="navbar">
         <div class="container text-center">
             <p class="lead text-center mx-auto">
-                <a href="./home.html">Bring it home!</a>
+                <span class="bold">Up Next:</span>
+                <a href="./home.html"> Bring it home!</a>
             </p>
         </div>
     </section>
