--- a/home.html
+++ b/home.html
@@ -114,7 +114,7 @@
                         <li><code>demoji</code>: Python library used to decode emojis into words (🙂 → Slightly Smiling
                             Face).
                         </li>
-                        <li><code>textblob</code>Python library used to conduct sentiment, subjectivity, and phrase
+                        <li><code>textblob</code>: Python library used to conduct sentiment, subjectivity, and phrase
                             analysis.
                         </li>
                         <li><code>nltk</code>: Python library used for preprocessing of tweets.</li>
@@ -124,7 +124,7 @@
                         <li><code>re</code>: Aka. Regex. Python library used to make string matche to figure out how to
                             clean
                             tweets.</li>
-                        <li><code>os</code>Python library used to get environment variables.</li>
+                        <li><code>os</code>: Python library used to get environment variables.</li>
                     </ul>
 
                 </div>
