--- a/about.html
+++ b/about.html
@@ -27,8 +27,8 @@
                 in its DNA. Used to identify bodies, track down blood relatives, paternity disputes, and more. </p>
 
             <h3 class="text-wheat bold">How does DNA Fingerprint identify a person?</h3>
-            <p>DNA fingerprinting focuses on sequences of DNA called minisatellites that contain repeating patterns with
-                no known function. </p>
+            <p>DNA fingerprinting focuses on sequences of DNA called minisatellites, which do not contribute to the
+                functions of genes. Each individual has a unique pattern of minisatellites.</p>
 
             <blockquote>Minisatellites (AKA tandem repeats) - repetitive DNA sequences (10-60bp) that are repeated
                 around 5-60 times in the entire genome.
@@ -41,7 +41,7 @@
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
 
-            <p>Therefore, a person is likely to have a similar number of repeats to their close relatives than people
+            <p>A person is likely to have a similar number of repeats to their close relatives than people
                 more distantly related to them and strangers. </p>
 
             <p>Minisatellites are present in the centromeres and the telomeres of chromosomes. They also regulate
@@ -100,6 +100,21 @@
             <iframe src="https://www.youtube.com/embed/QxCoG5vuinc" title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
+
+            <h3 class="text-light-green bold">References</h3>
+            <ol>
+                <li>DNA fingerprinting. Genome.gov. (n.d.). Retrieved November 22, 2021, from
+                    https://www.genome.gov/genetics-glossary/DNA-Fingerprinting.</li>
+                <li>The Public Engagement team at the Wellcome Genome Campus. (2021, July 21). What is a DNA
+                    fingerprint? Facts. Retrieved November 22, 2021, from
+                    https://www.yourgenome.org/facts/what-is-a-dna-fingerprint.</li>
+                <li>Smith, M. (n.d.). DNA fingerprinting: Purpose, procedure, and how it's used. WebMD. Retrieved
+                    November 22, 2021, from https://www.webmd.com/a-to-z-guides/dna-fingerprinting-overview.</li>
+                <li>YouTube. (2020). Minisatellites. YouTube. Retrieved November 22, 2021, from
+                    https://www.youtube.com/watch?v=g-em1OPKazs.</li>
+                <li>YouTube. (2020). The first use of Dna fingerprinting in a criminal case. YouTube. Retrieved November
+                    22, 2021, from https://www.youtube.com/watch?v=QxCoG5vuinc.</li>
+            </ol>
         </div>
     </section>
 
