--- a/ethics.html
+++ b/ethics.html
@@ -70,15 +70,14 @@
                         negatively affecting them in their future careers and life.
                     </p>
 
-                    <p>Furthermore, the supposed accuracy of DNA fingerprinting results leads investigators to not
+                    <p>Furthermore, It has been long believed that DNA is the “gold standard” of forensic science, free
+                        of all
+                        subjectivity. The supposed accuracy of DNA fingerprinting results leads investigators to not
                         pursue a
                         larger range of suspects, as they believe that the suspect in the DNA sample is the only one,
                         when
                         the
                         DNA sample may have been interpreted incorrectly.
-                    </p>
-                    <p>It has been long believed that DNA is the “gold standard” of forensic science, free of all
-                        subjectivity.
                     </p>
                 </div>
 
@@ -92,7 +91,9 @@
                     <p>Indeed, in 2010, African Americans accounted for 27% of all adult arrests when the total Black
                         population was 12%. In other countries, African Americans make up 52% of the population and
                         account
-                        for over 85% of arrests [1].
+                        for over 85% of arrests [1]. This leads to more African Americans having their DNA in a national
+                        database than other races, leading them to have a higher likelihood of a match with another
+                        suspect's DNA.
                     </p>
                 </div>
 
@@ -127,6 +128,11 @@
                             results back.
                         </li>
                     </ul>
+
+                    <p>This shows that even though people are concerned about their privacy, they are still willing to
+                        provide data to researchers if necessary. This willingness of the public matches up with the
+                        research on the previous page, in which the overall sentiment of DNA fingerprinting was
+                        positive.</p>
 
                     <p>Many individuals are also worried about the potential of the use of their genetic information to
                         discriminate: for example, getting different kinds of insurance coverage for different prices
