--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
                 </li>
                 <li>Longer sequences will not move far as much as shorter sequences.</li>
                 <li>Human inspection is able to match the result on the gel to the known gel results in a database,
-                    effectively identifying the pereson.</li>
+                    effectively identifying the person.</li>
             </ol>
 
             <iframe src="https://www.youtube.com/embed/QxCoG5vuinc" title="YouTube video player" frameborder="0"
@@ -105,7 +105,7 @@
             <ol>
                 <li>DNA fingerprinting. Genome.gov. (n.d.). Retrieved November 22, 2021, from
                     https://www.genome.gov/genetics-glossary/DNA-Fingerprinting.</li>
-                <li>The Public Engagement team at the Wellcome Genome Campus. (2021, July 21). What is a DNA
+                <li>The Public Engagement team at the Welcome Genome Campus. (2021, July 21). What is a DNA
                     fingerprint? Facts. Retrieved November 22, 2021, from
                     https://www.yourgenome.org/facts/what-is-a-dna-fingerprint.</li>
                 <li>Smith, M. (n.d.). DNA fingerprinting: Purpose, procedure, and how it's used. WebMD. Retrieved
