--- a/ethics.html
+++ b/ethics.html
@@ -38,7 +38,7 @@
                     integral
                     part of modern crime-solving. The National Database of DNA has grown exponentially. Now, many
                     individuals are concerned about personal privacy when information is not only stored about
-                    crimminals
+                    criminals
                     but about a much wider range of people.
                 </p>
                 <div class="bias">
