--- a/home.html
+++ b/home.html
@@ -81,7 +81,7 @@
                         <li><code>chart.js</code>: Used to create the charts on the data page.</li>
                         <li><code>typeit.js</code>: Used to create the typewriter effect.</li>
                         <li><code>Hasura</code>: Database used to store survey responses.</li>
-                        <li><code>graphql</code>: Langauge used to query the database.</li>
+                        <li><code>graphql</code>: Language used to query the database.</li>
                     </ul>
                 </div>
                 <div class="col-md-6 d-flex align-items-center">
@@ -100,11 +100,11 @@
                     </a>
                     <p>Sentiment analysis was used to collect data on the research page in order to figure out the
                         general
-                        public's opinnion on DNA fingerprinting.</p>
+                        public's opinion on DNA fingerprinting.</p>
 
                     <p>Languages used:</p>
                     <ul>
-                        <li><code>Python3</code>: The best programming language (objectively).</li>
+                        <li><code>Python3</code>: The best programming language (slightly subjective).</li>
                         <li><code>Jupyter Notebook</code>: Aka. Google Colab. Environment in which the Python code was
                             run.</li>
                         <li><code>Tweepy</code>: Python library used to query the Twitter API.</li>
@@ -121,7 +121,7 @@
                         <li><code>pandas</code>: Python library used to temporarily hold tweets before pushing to the
                             Google
                             Spreadsheet.</li>
-                        <li><code>re</code>: Aka. Regex. Python library used to make string matche to figure out how to
+                        <li><code>re</code>: Aka. Regex. Python library used to make string matches to figure out how to
                             clean
                             tweets.</li>
                         <li><code>os</code>: Python library used to get environment variables.</li>
