fix one type el oh el

--- a/ethics.html
+++ b/ethics.html
@@ -257,7 +257,7 @@
         <div class="container text-center">
             <p class="lead text-center mx-auto">
                 <span class="bold">Up Next:</span>
-                <a href="./survey.html"> Get your opinnion on DNA Fingerprinting
+                <a href="./survey.html"> Get your opinion on DNA Fingerprinting
                     Heard</a>
             </p>
         </div>
